@@ -1,5 +1,10 @@
 2010-04-19  Richard Guenther  <rguenther@suse.de>
 
+	PR tree-optimization/43796
+	* gfortran.dg/pr43796.f90: New testcase.
+
+2010-04-19  Richard Guenther  <rguenther@suse.de>
+
 	PR tree-optimization/43783
 	* gcc.c-torture/execute/pr43783.c: New testcase.
 
